--- a/markpress/assets/css/style.css
+++ b/markpress/assets/css/style.css
@@ -1,25 +1,18 @@
 html, body {
-    min-height: 100%;
-    height: 100%;
-}
+  min-height: 100%;
+  height: 100%;
+  background: #fff; }
 
 #primary {
-    height: 100%;
-}
+  height: 100%; }
 
-#editor {
-    width: 50%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
+#markpress-editor, #markpress-preview {
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0; }
 
-#preview {
-    width: 50%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    overflow: auto;
-}
+#markpress-preview {
+  right: 0;
+  overflow: auto; }
