--- a/markpress/assets/css/style.css
+++ b/markpress/assets/css/style.css
@@ -1,18 +1,40 @@
+* {
+  box-sizing: border-box; }
+
 html, body {
   min-height: 100%;
   height: 100%;
-  background: #fff; }
+  background: #0D0D0D; }
 
 #primary {
-  height: 100%; }
+  height: 100%;
+  position: fixed;
+  left: 20%;
+  width: 80%;
+  background: #fff; }
 
-#markpress-editor, #markpress-preview {
+#markpress-preview, #markpress-editor {
   width: 50%;
   height: 100%;
   position: absolute;
-  top: 0;
-  left: 0; }
-
-#markpress-preview {
+  left: auto;
   right: 0;
-  overflow: auto; }
+  overflow: auto;
+  padding: 0 2%; }
+
+#markpress-editor {
+  right: auto;
+  left: 0;
+  border: 0;
+  outline: none;
+  background: #efefef;
+  padding: 20px 2%; }
+
+#entries {
+  float: left;
+  width: 20%;
+  padding: 0 2%;
+  color: #ddd; }
+  #entries h3 {
+    font-weight: normal;
+    font-size: 16px; }
