--- a/markpress/assets/css/style.scss
+++ b/markpress/assets/css/style.scss
@@ -1,23 +1,47 @@
+* { box-sizing: border-box } //FTW!
+
 html, body {
     min-height: 100%;
     height: 100%;
-    background: #fff;
+    background: #0D0D0D;
 }
 
 #primary {
     height: 100%;
-}
-
-#markpress-editor {
-    width: 50%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: fixed;
+    left: 20%;
+    width: 80%;
+    background: #fff;
 }
 
 #markpress-preview {
-    @extend #markpress-editor;
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    left: auto;
     right: 0;
     overflow: auto;
+    padding: 0 2%;
+}
+
+#markpress-editor {
+    @extend #markpress-preview;
+    right: auto;
+    left: 0;
+    border: 0;
+    outline: none;
+    background: #efefef;
+    padding: 20px 2%;
+}
+
+#entries {
+    float: left;
+    width: 20%;
+    padding: 0 2%;
+    color: #ddd;
+
+    h3 {
+        font-weight: normal;
+        font-size: 16px;
+    }
 }
