--- a/markpress/assets/css/style.css
+++ b/markpress/assets/css/style.css
@@ -13,7 +13,7 @@ html, body {
   width: 80%;
   background: #fff; }
 
-#markpress-preview, #markpress-editor {
+.markpress-editor__preview, .markpress-editor__content {
   width: 50%;
   height: 100%;
   position: absolute;
@@ -21,14 +21,35 @@ html, body {
   right: 0;
   overflow: auto;
   padding: 0 2%; }
+.markpress-editor__content {
+  padding: 0;
+  right: auto;
+  left: 0; }
+  .markpress-editor__content__title, .markpress-editor__content__tags {
+    height: 5%;
+    background: #DCDCDC; }
+    .markpress-editor__content__title input, .markpress-editor__content__tags input {
+      display: block;
+      width: 100%;
+      height: 100%;
+      border: 0;
+      outline: none;
+      padding: 0 2%;
+      font-size: 22px;
+      background: transparent; }
+  .markpress-editor__content__tags {
+    background: #AAAAAA; }
+    .markpress-editor__content__tags input {
+      font-size: 14px; }
 
 #markpress-editor {
-  right: auto;
-  left: 0;
   border: 0;
   outline: none;
   background: #efefef;
-  padding: 20px 2%; }
+  padding: 20px 2%;
+  height: 90%;
+  width: 100%;
+  display: block; }
 
 #entries {
   float: left;
