--- a/markpress/assets/css/style.scss
+++ b/markpress/assets/css/style.scss
@@ -14,24 +14,58 @@ html, body {
     background: #fff;
 }
 
-#markpress-preview {
-    width: 50%;
-    height: 100%;
-    position: absolute;
-    left: auto;
-    right: 0;
-    overflow: auto;
-    padding: 0 2%;
+.markpress-editor {
+    &__preview {
+        width: 50%;
+        height: 100%;
+        position: absolute;
+        left: auto;
+        right: 0;
+        overflow: auto;
+        padding: 0 2%;
+    }
+
+    &__content {
+        @extend .markpress-editor__preview;
+        padding: 0;
+        right: auto;
+        left: 0;
+
+        &__title {
+            height: 5%;
+            background: #DCDCDC;
+
+            input {
+                display: block;
+                width: 100%;
+                height: 100%;
+                border: 0;
+                outline: none;
+                padding: 0 2%;
+                font-size: 22px;
+                background: transparent;
+            }
+        }
+
+        &__tags {
+            @extend .markpress-editor__content__title;
+            background: #AAAAAA;
+
+            input {
+                font-size: 14px;
+            }
+        }
+    }
 }
 
 #markpress-editor {
-    @extend #markpress-preview;
-    right: auto;
-    left: 0;
     border: 0;
     outline: none;
     background: #efefef;
     padding: 20px 2%;
+    height: 90%;
+    width: 100%;
+    display: block;
 }
 
 #entries {
