--- a/markpress/assets/css/style.css
+++ b/markpress/assets/css/style.css
@@ -29,10 +29,15 @@ html, body {
   padding: 0;
   right: auto;
   left: 0;
+  padding-top: 96px;
 }
 .markpress-editor__content__title, .markpress-editor__content__tags {
-  height: 5%;
-  background: #DCDCDC;
+  height: 48px;
+  width: 100%;
+  background: #efefef;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .markpress-editor__content__title input, .markpress-editor__content__tags input {
   display: block;
@@ -45,10 +50,24 @@ html, body {
   background: transparent;
 }
 .markpress-editor__content__tags {
-  background: #AAAAAA;
+  background: #dcdcdc;
+  top: 48px;
 }
 .markpress-editor__content__tags input {
   font-size: 14px;
+  padding: 0 2% 0 6%;
+}
+.markpress-editor__content__tags:before {
+  content: "#";
+  display: block;
+  position: absolute;
+  line-height: 48px;
+  width: 6%;
+  left: 0;
+  top: 0;
+  font-size: 20px;
+  color: #9E9E9E;
+  text-align: center;
 }
 
 #markpress-editor {
@@ -56,7 +75,7 @@ html, body {
   outline: none;
   background: #efefef;
   padding: 20px 2%;
-  height: 90%;
+  height: 100%;
   width: 100%;
   display: block;
 }
