--- a/markpress/src/sass/style.scss
+++ b/markpress/src/sass/style.scss
@@ -1,9 +1,18 @@
-* { box-sizing: border-box } //FTW!
+@import "settings";
+
+@import "libs/reset";
+@import "libs/vertical-rhythm";
+
+* { box-sizing: border-box; font-family: 'PT Serif', serif; } //FTW!
+
+@include establish-baseline;
 
 html, body {
+    -webkit-text-size-adjust: 100%;
     min-height: 100%;
     height: 100%;
-    background: #0D0D0D;
+    background: $aside-bg;
+    font-family: 'PT Serif', serif;
 }
 
 #primary {
@@ -11,7 +20,7 @@ html, body {
     position: fixed;
     left: 20%;
     width: 80%;
-    background: #fff;
+    background: $preview-bg;
 }
 
 .markpress-editor {
@@ -35,12 +44,13 @@ html, body {
         &__title {
             height: 48px;
             width: 100%;
-            background: #efefef;
+            background: $editor-bg;
             position: absolute;
             top: 0;
             left: 0;
 
             input {
+                color: $editor-color;
                 display: block;
                 width: 100%;
                 height: 100%;
@@ -54,11 +64,11 @@ html, body {
 
         &__tags {
             @extend .markpress-editor__content__title;
-            background: #dcdcdc;
+            background: darken($editor-bg, 5);
             top: 48px;
 
             input {
-                font-size: 14px;
+                @include change-font-size($smaller-font-size);
                 padding: 0 2% 0 6%;
             }
 
@@ -71,7 +81,7 @@ html, body {
                 left: 0;
                 top: 0;
                 font-size: 20px;
-                color: #9E9E9E;
+                color: darken($editor-bg, 30);
                 text-align: center;
             }
         }
@@ -79,20 +89,37 @@ html, body {
 }
 
 #markpress-editor {
+    color: $editor-color;
     border: 0;
     outline: none;
-    background: #efefef;
-    padding: 20px 2%;
+    background: $editor-bg;
+    padding: rhythm(1) 2%;
     height: 100%;
     width: 100%;
     display: block;
+    font-family: 'PT Mono';
+    @include change-font-size($smaller-font-size);
+}
+
+#markpress-preview {
+    color: $editor-color;
+
+    h1 {
+        @include change-font-size($largest-font-size);
+        border-bottom: 1px solid $border-color;
+        margin-bottom: rhythm-border(1, 1px);
+    }
+
+    p {
+        margin-bottom: rhythm(1);
+    }
 }
 
 #entries {
     float: left;
     width: 20%;
     padding: 0 2%;
-    color: #ddd;
+    color: $aside-color;
 
     h3 {
         font-weight: normal;
