--- a/markpress/src/sass/settings.scss
+++ b/markpress/src/sass/settings.scss
@@ -1,5 +1,6 @@
 $base-font-size:    18px;
 $smaller-font-size: 14px;
+$small-font-size:   16px;
 $bigger-font-size:  24px;
 $large-font-size:   32px;
 $largest-font-size: 42px;
@@ -11,6 +12,7 @@ $anim-speed:        150ms;
 $aside-bg:          #0D0D0D;
 $preview-bg:        #fff;
 $editor-bg:         #efefef;
+$code-bg:           #f6f6f6;
 
 $editor-color:      #111;
 $aside-color:       #ddd;
