--- a/markpress/src/sass/style.scss
+++ b/markpress/src/sass/style.scss
@@ -106,12 +106,74 @@ html, body {
 
     h1 {
         @include change-font-size($largest-font-size);
+        font-weight: bold;
         border-bottom: 1px solid $border-color;
         margin-bottom: rhythm-border(1, 1px);
     }
 
-    p {
+    h2 {
+        @extend h1;
+        @include change-font-size($large-font-size);
+    }
+
+    h3 {
+        @extend h1;
+        @include change-font-size($bigger-font-size);
+    }
+
+    em {
+        font-style: italic;
+    }
+
+    strong {
+        font-weight: bold;
+    }
+
+    p, ul, blockquote, pre {
         margin-bottom: rhythm(1);
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    code {
+        font-family: 'PT Mono';
+        display: inline-block;
+        background: $code-bg;
+        border: 1px solid $border-color;
+        padding: 0 6px;
+        margin: -2px 0 -2px 0;
+        @include change-font-size($small-font-size);
+    }
+
+    pre {
+        background: $code-bg;
+        border: 1px solid $border-color;
+        padding: rhythm-border(0.5, 1px) 6px;
+
+        code {
+            display: block;
+            width: 100%;
+            border: 0px;
+            margin: 0;
+        }
+    }
+
+    ul {
+        list-style-type: disc;
+        padding-left: 20px;
+    }
+
+    ol {
+        @extend ul;
+        padding-left: 24px;
+        list-style-type: decimal;
+    }
+
+    blockquote {
+        padding: rhythm-border(1, 1px);
+        border: 1px solid $border-color;
     }
 }
 
