--- a/markpress/src/sass/style.scss
+++ b/markpress/src/sass/style.scss
@@ -163,6 +163,14 @@ html, body {
     ul {
         list-style-type: disc;
         padding-left: 20px;
+
+        li {
+            ul, ol {
+                &:last-child {
+                    margin-bottom: rhythm(1);
+                }
+            }
+        }
     }
 
     ol {
