--- a/markpress/assets/css/style.css
+++ b/markpress/assets/css/style.css
@@ -70,8 +70,8 @@ html, body {
 #primary {
   height: 100%;
   position: fixed;
-  left: 20%;
-  width: 80%;
+  left: 0%;
+  width: 100%;
   background: white;
 }
 
@@ -223,14 +223,40 @@ html, body {
   padding: 2.5rem;
   border: 1px solid #dddddd;
 }
+#markpress-preview a {
+  color: #302eb6;
+  text-decoration: underline;
+}
+#markpress-preview a:hover {
+  color: #111111;
+}
+#markpress-preview hr {
+  border: 0;
+  height: 1px;
+  background-color: #dddddd;
+  margin: 0 0 2.5rem 0;
+}
+#markpress-preview img {
+  max-width: 100%;
+}
 
 #entries {
   float: left;
   width: 20%;
-  padding: 0 2%;
+  padding: 1.3rem 2%;
   color: #dddddd;
+  overflow: auto;
+  margin-left: -20%;
 }
 #entries h3 {
   font-weight: normal;
   font-size: 16px;
+}
+#entries a {
+  color: white;
+  text-decoration: none;
+}
+#entries a:hover {
+  color: #efefef;
+  text-decoration: underline;
 }
