--- a/markpress/src/sass/settings.scss
+++ b/markpress/src/sass/settings.scss
@@ -18,3 +18,5 @@ $link:              #302EB6;
 $editor-color:      #111;
 $aside-color:       #ddd;
 $border-color:      #ddd;
+
+$grid-columns:      4;
