--- a/markpress/assets/css/style.css
+++ b/markpress/assets/css/style.css
@@ -45,6 +45,12 @@ table {
  * Date:    2014-05-18
  */
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+* {
   box-sizing: border-box;
   font-family: 'PT Serif', serif;
 }
@@ -67,27 +73,55 @@ html, body {
   font-family: 'PT Serif', serif;
 }
 
+#actions {
+  height: 5.2rem;
+  padding: 0 2%;
+}
+#actions button {
+  border: 0;
+  background: #efefef;
+  padding: 0 10px;
+  margin: 0.91rem 10px 0 0;
+  height: 3.64rem;
+  cursor: pointer;
+  display: block;
+  float: left;
+  outline: none;
+}
+#actions button.save {
+  float: right;
+  margin-right: 0;
+}
+#actions button:hover {
+  background: #d5d5d5;
+}
+
 #primary {
   height: 100%;
   position: fixed;
   left: 0%;
   width: 100%;
   background: white;
+  -webkit-transition: width 150ms, left 150ms;
+  -moz-transition: width 150ms, left 150ms;
+  transition: width 150ms, left 150ms;
 }
 
 .markpress-editor__preview, .markpress-editor__content {
-  width: 50%;
+  width: 100%;
   height: 100%;
   position: absolute;
   left: auto;
   right: 0;
   overflow: auto;
   padding: 0 2%;
+  top: 100%;
 }
 .markpress-editor__content {
   padding: 0;
   right: auto;
   left: 0;
+  top: 0;
   padding-top: 96px;
 }
 .markpress-editor__content__title, .markpress-editor__content__tags {
@@ -131,6 +165,15 @@ html, body {
   font-size: 20px;
   color: #a3a3a3;
   text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .markpress-editor__preview, .markpress-editor__content {
+    top: 0;
+    width: 50%;
+  }
+  .markpress-editor__content {
+    width: 50%;
+  }
 }
 
 #markpress-editor {
@@ -247,6 +290,9 @@ html, body {
   color: #dddddd;
   overflow: auto;
   margin-left: -20%;
+  -webkit-transition: margin-left 150ms;
+  -moz-transition: margin-left 150ms;
+  transition: margin-left 150ms;
 }
 #entries h3 {
   font-weight: normal;
@@ -259,4 +305,12 @@ html, body {
 #entries a:hover {
   color: #efefef;
   text-decoration: underline;
+}
+
+.menu-open #entries {
+  margin-left: 0;
+}
+.menu-open #primary {
+  width: 80%;
+  left: 20%;
 }
