--- a/markpress/assets/css/style.css
+++ b/markpress/assets/css/style.css
@@ -106,17 +106,6 @@ html, body {
   background: #d5d5d5;
 }
 
-#primary {
-  height: 100%;
-  position: fixed;
-  left: 0%;
-  width: 100%;
-  background: white;
-  -webkit-transition: width 150ms, left 150ms;
-  -moz-transition: width 150ms, left 150ms;
-  transition: width 150ms, left 150ms;
-}
-
 .markpress-editor__preview, .markpress-editor__content {
   width: 100%;
   height: 100%;
@@ -293,16 +282,32 @@ html, body {
   max-width: 100%;
 }
 
+#primary {
+  height: 100%;
+  position: fixed;
+  left: 0%;
+  width: 100%;
+  background: white;
+  -webkit-transition: width 150ms, left 150ms;
+  -moz-transition: width 150ms, left 150ms;
+  transition: width 150ms, left 150ms;
+}
+
 #entries {
   float: left;
-  width: 20%;
+  width: 70%;
   padding: 1.3rem 2%;
   color: #dddddd;
   overflow: auto;
-  margin-left: -20%;
+  margin-left: -70%;
   -webkit-transition: margin-left 150ms;
   -moz-transition: margin-left 150ms;
   transition: margin-left 150ms;
+}
+@media screen and (min-width: 768px) {
+  #entries {
+    width: 20%;
+  }
 }
 #entries h3 {
   font-weight: normal;
@@ -321,6 +326,11 @@ html, body {
   margin-left: 0;
 }
 .menu-open #primary {
-  width: 80%;
-  left: 20%;
+  left: 70%;
+}
+@media screen and (min-width: 768px) {
+  .menu-open #primary {
+    width: 80%;
+    left: 20%;
+  }
 }
