--- a/markpress/src/sass/style.scss
+++ b/markpress/src/sass/style.scss
@@ -58,16 +58,6 @@ html, body {
     }
 }
 
-#primary {
-    height: 100%;
-    position: fixed;
-    left: 0%;
-    width: 100%;
-    background: $preview-bg;
-
-    @include transition(width $anim-speed, left $anim-speed);
-}
-
 .markpress-editor {
     &__preview {
         width: 100%;
@@ -263,14 +253,28 @@ html, body {
     }
 }
 
+#primary {
+    height: 100%;
+    position: fixed;
+    left: 0%;
+    width: 100%;
+    background: $preview-bg;
+
+    @include transition(width $anim-speed, left $anim-speed);
+}
+
 #entries {
     float: left;
-    width: 20%;
+    width: 70%;
     padding: rhythm(0.5) 2%;
     color: $aside-color;
     overflow: auto;
-    margin-left: -20%;
+    margin-left: -70%;
     @include transition(margin-left $anim-speed);
+
+    @include media($desktop) {
+        width: 20%;
+    }
 
     h3 {
         font-weight: normal;
@@ -294,7 +298,13 @@ html, body {
     }
 
     #primary {
-        width: 80%;
-        left: 20%;
+        left: 70%;
+    }
+
+    @include media($desktop) {
+        #primary {
+            width: 80%;
+            left: 20%;
+        }
     }
 }
