--- a/markpress/src/sass/settings.scss
+++ b/markpress/src/sass/settings.scss
@@ -13,7 +13,8 @@ $aside-bg:          #0D0D0D;
 $preview-bg:        #fff;
 $editor-bg:         #efefef;
 $code-bg:           #f6f6f6;
-$link:              #302EB6;
+$link:              #BD1550;
+$highlight:         #8A9B0F;
 
 $editor-color:      #111;
 $aside-color:       #ddd;
