Also save new posts

--- a/markpress/assets/css/style.css
+++ b/markpress/assets/css/style.css
@@ -1,365 +1,2 @@
-html, body, div, span, applet, object, iframe, h1, #markpress-preview h2, #markpress-preview h3, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, #markpress-preview ol, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-body {
-  line-height: inherit;
-}
-
-ol, ul, #markpress-preview ol {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-q:before, q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/*
- * Vertical Rhythmn in Sass with helpful mixins and helpers
- * Author:  Gaya Kessler
- * Version: 0.0.1
- * Date:    2014-05-18
- */
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-* {
-  box-sizing: border-box;
-  font-family: 'PT Serif', serif;
-}
-
-html {
-  font-size: 62.5%;
-  /* Sets up the Base 10 stuff */
-}
-
-html body, html input, html textarea, html button {
-  font-size: 1.8rem;
-  line-height: 2.6rem;
-}
-
-html, body {
-  -webkit-text-size-adjust: 100%;
-  min-height: 100%;
-  height: 100%;
-  background: #0d0d0d;
-  font-family: 'PT Serif', serif;
-}
-
-#markpress {
-  padding-top: 5.2rem;
-  position: relative;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-}
-
-#actions {
-  height: 5.2rem;
-  padding: 0 2%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 666;
-  background: #0d0d0d;
-}
-@media screen and (min-width: 768px) {
-  #actions {
-    padding: 0 1%;
-  }
-}
-#actions button {
-  border: 0;
-  background: #efefef;
-  padding: 0 10px;
-  margin: 0.91rem 10px 0 0;
-  height: 3.64rem;
-  cursor: pointer;
-  display: block;
-  float: left;
-  outline: none;
-}
-#actions button.save {
-  float: right;
-  margin-right: 0;
-}
-@media screen and (min-width: 768px) {
-  #actions button.mode {
-    display: none;
-  }
-}
-#actions button:hover {
-  background: #d5d5d5;
-}
-#actions button.new {
-  padding: 0;
-  width: 3.64rem;
-  background: #8a9b0f;
-}
-#actions button.new:hover {
-  background: #616c0b;
-}
-
-.markpress-editor__preview, .markpress-editor__content {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: auto;
-  right: 0;
-  overflow: auto;
-  padding: 7.8rem 2% 2.6rem 2%;
-  top: 100%;
-}
-.markpress-editor__content {
-  padding: 0;
-  right: auto;
-  left: 0;
-  top: 0;
-  padding-top: 15.6rem;
-}
-.markpress-editor__content__title, .markpress-editor__content__tags {
-  height: 5.2rem;
-  width: 100%;
-  background: #efefef;
-  position: absolute;
-  top: 5.2rem;
-  left: 0;
-}
-.markpress-editor__content__title input, .markpress-editor__content__tags input {
-  color: #111111;
-  display: block;
-  width: 100%;
-  height: 100%;
-  border: 0;
-  outline: none;
-  padding: 0 2%;
-  font-size: 22px;
-  background: transparent;
-}
-.markpress-editor__content__tags {
-  background: #e2e2e2;
-  top: 10.4rem;
-}
-.markpress-editor__content__tags input {
-  font-size: 14px;
-  font-size: 1.4rem;
-  line-height: 26px;
-  line-height: 2.6rem;
-  padding: 0 2% 0 6%;
-}
-.markpress-editor__content__tags:before {
-  content: "#";
-  display: block;
-  position: absolute;
-  line-height: 48px;
-  width: 6%;
-  left: 0;
-  top: 0;
-  font-size: 20px;
-  color: #a3a3a3;
-  text-align: center;
-}
-.markpress-editor__content__save {
-  display: none;
-}
-@media screen and (min-width: 768px) {
-  .markpress-editor__preview, .markpress-editor__content {
-    top: 0;
-    width: 50%;
-  }
-  .markpress-editor__content {
-    width: 50%;
-  }
-}
-
-#markpress-editor {
-  color: #111111;
-  border: 0;
-  outline: none;
-  background: #efefef;
-  padding: 2.6rem 2%;
-  height: 100%;
-  width: 100%;
-  display: block;
-  font-family: 'PT Mono';
-  font-size: 14px;
-  font-size: 1.4rem;
-  line-height: 26px;
-  line-height: 2.6rem;
-}
-
-#markpress-preview {
-  color: #111111;
-}
-#markpress-preview h1, #markpress-preview h2, #markpress-preview h3 {
-  font-size: 42px;
-  font-size: 4.2rem;
-  line-height: 78px;
-  line-height: 7.8rem;
-  font-weight: bold;
-  border-bottom: 1px solid #dddddd;
-  margin-bottom: 2.5rem;
-}
-#markpress-preview h2 {
-  font-size: 32px;
-  font-size: 3.2rem;
-  line-height: 52px;
-  line-height: 5.2rem;
-}
-#markpress-preview h3 {
-  font-size: 24px;
-  font-size: 2.4rem;
-  line-height: 52px;
-  line-height: 5.2rem;
-}
-#markpress-preview em {
-  font-style: italic;
-}
-#markpress-preview strong {
-  font-weight: bold;
-}
-#markpress-preview p, #markpress-preview ul, #markpress-preview ol, #markpress-preview blockquote, #markpress-preview pre {
-  margin-bottom: 2.6rem;
-}
-#markpress-preview p:last-child, #markpress-preview ul:last-child, #markpress-preview ol:last-child, #markpress-preview blockquote:last-child, #markpress-preview pre:last-child {
-  margin-bottom: 0;
-}
-#markpress-preview code {
-  font-family: 'PT Mono';
-  display: inline-block;
-  background: #f6f6f6;
-  border: 1px solid #dddddd;
-  padding: 0 6px;
-  margin: -2px 0 -2px 0;
-  font-size: 16px;
-  font-size: 1.6rem;
-  line-height: 26px;
-  line-height: 2.6rem;
-}
-#markpress-preview pre {
-  background: #f6f6f6;
-  border: 1px solid #dddddd;
-  padding: 1.2rem 6px;
-}
-#markpress-preview pre code {
-  display: block;
-  width: 100%;
-  border: 0px;
-  margin: 0;
-}
-#markpress-preview ul, #markpress-preview ol {
-  list-style-type: disc;
-  padding-left: 20px;
-}
-#markpress-preview ul li ul:last-child, #markpress-preview ol li ul:last-child, #markpress-preview ul li ol:last-child, #markpress-preview ol li ol:last-child, #markpress-preview ul li ol:last-child, #markpress-preview ol li ol:last-child {
-  margin-bottom: 2.6rem;
-}
-#markpress-preview ol {
-  padding-left: 24px;
-  list-style-type: decimal;
-}
-#markpress-preview blockquote {
-  padding: 2.5rem;
-  border: 1px solid #dddddd;
-}
-#markpress-preview a {
-  color: #bd1550;
-  text-decoration: underline;
-}
-#markpress-preview a:hover {
-  color: #111111;
-}
-#markpress-preview hr {
-  border: 0;
-  height: 1px;
-  background-color: #dddddd;
-  margin: 0 0 2.5rem 0;
-}
-#markpress-preview img {
-  max-width: 100%;
-}
-
-#primary {
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0%;
-  width: 100%;
-  background: white;
-  z-index: 1;
-  -webkit-transition: width 150ms, left 150ms;
-  -moz-transition: width 150ms, left 150ms;
-  transition: width 150ms, left 150ms;
-}
-
-#entries {
-  float: left;
-  width: 70%;
-  padding: 1.3rem 2%;
-  color: #dddddd;
-  overflow: auto;
-  margin-left: -70%;
-  -webkit-transition: margin-left 150ms;
-  -moz-transition: margin-left 150ms;
-  transition: margin-left 150ms;
-}
-@media screen and (min-width: 768px) {
-  #entries {
-    width: 20%;
-    padding: 1.3rem 1%;
-  }
-}
-#entries h3 {
-  font-weight: normal;
-  font-size: 16px;
-}
-#entries a {
-  color: white;
-  text-decoration: none;
-}
-#entries a:hover {
-  color: #efefef;
-  text-decoration: underline;
-}
-
-.menu-open #entries {
-  margin-left: 0;
-}
-.menu-open #primary {
-  left: 70%;
-}
-@media screen and (min-width: 768px) {
-  .menu-open #primary {
-    width: 80%;
-    left: 20%;
-  }
-}
+html,body,div,span,applet,object,iframe,h1,#markpress-preview h2,#markpress-preview h3,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,#markpress-preview ol,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:inherit}ol,ul,#markpress-preview ol{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after{content:"";content:none}q:before,q:after{content:"";content:none}table{border-collapse:collapse;border-spacing:0}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}*{box-sizing:border-box;font-family:'PT Serif', serif}html{font-size:62.5%}html body,html input,html textarea,html button{font-size:1.8rem;line-height:2.6rem}html,body{-webkit-text-size-adjust:100%;min-height:100%;height:100%;background:#0d0d0d;font-family:'PT Serif', serif}#markpress{padding-top:5.2rem;position:relative;height:100%;width:100%;top:0;left:0}#actions{height:5.2rem;padding:0 2%;position:absolute;top:0;left:0;width:100%;z-index:666;background:#0d0d0d}@media screen and (min-width: 768px){#actions{padding:0 1%}}#actions button{border:0;background:#efefef;padding:0 10px;margin:0.91rem 10px 0 0;height:3.64rem;cursor:pointer;display:block;float:left;outline:none}#actions button.save{float:right;margin-right:0}@media screen and (min-width: 768px){#actions button.mode{display:none}}#actions button:hover{background:#d5d5d5}#actions button.new{padding:0;width:3.64rem;background:#8a9b0f}#actions button.new:hover{background:#616c0b}.markpress-editor__preview,.markpress-editor__content{width:100%;height:100%;position:absolute;left:auto;right:0;overflow:auto;padding:7.8rem 2% 2.6rem 2%;top:100%}.markpress-editor__content{padding:0;right:auto;left:0;top:0;padding-top:15.6rem}.markpress-editor__content__title,.markpress-editor__content__tags{height:5.2rem;width:100%;background:#efefef;position:absolute;top:5.2rem;left:0}.markpress-editor__content__title input,.markpress-editor__content__tags input{color:#111;display:block;width:100%;height:100%;border:0;outline:none;padding:0 2%;font-size:22px;background:transparent}.markpress-editor__content__tags{background:#e2e2e2;top:10.4rem}.markpress-editor__content__tags input{font-size:14px;font-size:1.4rem;line-height:26px;line-height:2.6rem;padding:0 2% 0 6%}.markpress-editor__content__tags:before{content:"#";display:block;position:absolute;line-height:48px;width:6%;left:0;top:0;font-size:20px;color:#a3a3a3;text-align:center}.markpress-editor__content__save{display:none}@media screen and (min-width: 768px){.markpress-editor__preview,.markpress-editor__content{top:0;width:50%}.markpress-editor__content{width:50%}}
+#markpress-editor{color:#111;border:0;outline:none;background:#efefef;padding:2.6rem 2%;height:100%;width:100%;display:block;font-family:'PT Mono';font-size:14px;font-size:1.4rem;line-height:26px;line-height:2.6rem}#markpress-preview{color:#111}#markpress-preview h1,#markpress-preview h2,#markpress-preview h3{font-size:42px;font-size:4.2rem;line-height:78px;line-height:7.8rem;font-weight:bold;border-bottom:1px solid #ddd;margin-bottom:2.5rem}#markpress-preview h2{font-size:32px;font-size:3.2rem;line-height:52px;line-height:5.2rem}#markpress-preview h3{font-size:24px;font-size:2.4rem;line-height:52px;line-height:5.2rem}#markpress-preview em{font-style:italic}#markpress-preview strong{font-weight:bold}#markpress-preview p,#markpress-preview ul,#markpress-preview ol,#markpress-preview blockquote,#markpress-preview pre{margin-bottom:2.6rem}#markpress-preview p:last-child,#markpress-preview ul:last-child,#markpress-preview ol:last-child,#markpress-preview blockquote:last-child,#markpress-preview pre:last-child{margin-bottom:0}#markpress-preview code{font-family:'PT Mono';display:inline-block;background:#f6f6f6;border:1px solid #ddd;padding:0 6px;margin:-2px 0 -2px 0;font-size:16px;font-size:1.6rem;line-height:26px;line-height:2.6rem}#markpress-preview pre{background:#f6f6f6;border:1px solid #ddd;padding:1.2rem 6px}#markpress-preview pre code{display:block;width:100%;border:0px;margin:0}#markpress-preview ul,#markpress-preview ol{list-style-type:disc;padding-left:20px}#markpress-preview ul li ul:last-child,#markpress-preview ol li ul:last-child,#markpress-preview ul li ol:last-child,#markpress-preview ol li ol:last-child,#markpress-preview ul li ol:last-child,#markpress-preview ol li ol:last-child{margin-bottom:2.6rem}#markpress-preview ol{padding-left:24px;list-style-type:decimal}#markpress-preview blockquote{padding:2.5rem;border:1px solid #ddd}#markpress-preview a{color:#bd1550;text-decoration:underline}#markpress-preview a:hover{color:#111}#markpress-preview hr{border:0;height:1px;background-color:#ddd;margin:0 0 2.5rem 0}#markpress-preview img{max-width:100%}#primary{height:100%;position:fixed;top:0;left:0%;width:100%;background:#fff;z-index:1;-webkit-transition:width 150ms,left 150ms;-moz-transition:width 150ms,left 150ms;transition:width 150ms,left 150ms}#entries{float:left;width:70%;padding:1.3rem 2%;color:#ddd;overflow:auto;margin-left:-70%;-webkit-transition:margin-left 150ms;-moz-transition:margin-left 150ms;transition:margin-left 150ms}@media screen and (min-width: 768px){#entries{width:20%;padding:1.3rem 1%}}#entries h3{font-weight:normal;font-size:16px}#entries a{color:#fff;text-decoration:none}#entries a:hover{color:#efefef;text-decoration:underline}.menu-open #entries{margin-left:0}.menu-open #primary{left:70%}@media screen and (min-width: 768px){.menu-open #primary{width:80%;left:20%}}
