--- a/markpress/src/sass/style.scss
+++ b/markpress/src/sass/style.scss
@@ -21,7 +21,7 @@ html, body {
     font-family: 'PT Serif', serif;
 }
 
-#markpress {
+#markpress-container {
     padding-top: rhythm(2);
     position: relative;
     height: 100%;
