View mode on mobile

--- a/markpress/src/sass/style.scss
+++ b/markpress/src/sass/style.scss
@@ -93,8 +93,6 @@ html, body {
         padding: rhythm(3) 2% rhythm(1) 2%;
         background: $preview-bg;
         top: 100%;
-
-        @include transition(top $anim-speed);
     }
 
     &__content {
@@ -294,12 +292,6 @@ html, body {
     z-index: 1;
 
     @include transition(width $anim-speed, left $anim-speed);
-
-    &.preview {
-        .markpress-editor__preview {
-            top: 0;
-        }
-    }
 }
 
 #entries {
@@ -346,5 +338,11 @@ html, body {
             width: 80%;
             left: 20%;
         }
+    }
+}
+
+.preview-open {
+    .markpress-editor__preview {
+        top: 0;
     }
 }
