--- a/markpress/src/sass/style.scss
+++ b/markpress/src/sass/style.scss
@@ -54,6 +54,7 @@ html, body {
         display: block;
         float: left;
         outline: none;
+        border-radius: 2px;
 
         &.save {
             float: right;
